NetBSD Problem Report #51012

From www@NetBSD.org  Sat Mar 26 12:12:34 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 27D797ABD0
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 26 Mar 2016 12:12:34 +0000 (UTC)
Message-Id: <20160326121232.EF02A7ABFD@mollari.NetBSD.org>
Date: Sat, 26 Mar 2016 12:12:32 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/algor/dev/bonito_mainbus.c:89]: (error) Uninitialized variable: bc
X-Send-Pr-Version: www-1.0

>Number:         51012
>Category:       kern
>Synopsis:       src/sys/arch/algor/dev/bonito_mainbus.c:89]: (error) Uninitialized variable: bc
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Mar 26 12:15:00 +0000 2016
>Closed-Date:    Tue May 31 04:19:02 +0000 2016
>Last-Modified:  Tue May 31 04:19:02 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160326
>Organization:
>Environment:
>Description:
Source code is

#if defined(ALGOR_P6032)
    bc = &p6032_configuration.ac_bonito;
#endif
    sc->sc_bonito = bc;

but

   struct bonito_config *bc;

So if ALGOR_P6032 isn't defined, then random stack contents
are being copied into a struct field.

Suggest initialise bc to something sensible.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51012 CVS commit: src/sys/arch/algor/dev
Date: Tue, 31 May 2016 03:51:55 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Tue May 31 03:51:55 UTC 2016

 Modified Files:
 	src/sys/arch/algor/dev: bonito_mainbus.c

 Log Message:
 If ALGOR_P6032 is not defined, set sc_bonito to NULL instead of using
 random garbage off the stack. PR 51012 from David Binderman.


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 src/sys/arch/algor/dev/bonito_mainbus.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 31 May 2016 04:19:02 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.