If ALGOR_P6032 is not defined, set sc_bonito to NULL instead of using random garbage off the stack. PR 51012 from David Binderman.